<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/product_overview"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
            android:id="@+id/edit_product_name"
            android:hint="@string/product_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_product_desc"
                android:hint="@string/product_desc"
                android:lines="5"
                style="@style/EditorFieldStyle" />
            <TextView
                android:id="@+id/qtyTVLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EditorFieldStyle"
                android:text="Quantity:"/>
            <TextView
                android:id="@+id/qtyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EditorFieldStyle"
                android:text="0"/>
            <!-- use numberDecimal input type to accept numbers or floats for currency -->
            <TextView
                android:id="@+id/priceTVLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EditorFieldStyle"
                android:text="Retail Price:"/>
            <EditText
                android:id="@+id/edit_retailPrice"
                android:hint="@string/product_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />
            <TextView
                android:id="@+id/costTVLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EditorFieldStyle"
                android:text="Cost:"/>
            <EditText
                android:id="@+id/edit_product_cost"
                android:hint="@string/product_cost"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <!-- use numeric to force whole numbers -->
                <EditText
                    android:gravity="right"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/qtyToSellDetailTV"
                    android:numeric="integer"
                    android:paddingRight="40dp"
                    android:layout_weight="0.99" />
                <Button
                    android:layout_width="wrap_content"
                    android:text="Sell"
                    android:textAlignment="center"
                    android:layout_alignParentRight="true"
                    android:layout_height="50dp"
                    android:onClick="sellBtnPress"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <EditText
                    android:gravity="right"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/qtyToOrderDetailTV"
                    android:numeric="integer"
                    android:paddingRight="40dp"
                    android:layout_weight="0.99" />
                <Button
                    android:layout_width="wrap_content"
                    android:text="Order"
                    android:textAlignment="center"
                    android:layout_alignParentRight="true"
                    android:layout_height="50dp"
                    android:onClick="orderBtnPress"/>
            </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


